# vulkan-rs

./: Cargo.toml  README.md
examples/texture-rendering/: Cargo.toml  README.md
examples/texture-rendering/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/texture-rendering/src/: allocator.rs  debug.rs  main.rs
examples/triangle/: Cargo.toml  build.rs
examples/triangle/shaders/: shader.frag.spv  shader.vert.spv
examples/triangle/src/: main.rs
