[package]
name = "texture-loading"
rust-version = "1.77"
version.workspace = true
edition.workspace = true
author.workspace = true
description.workspace = true

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
winit = { workspace = true }
image = { workspace = true }

[build-dependencies]
fs_extra = "1.3.0"